Se detallaron de pagina wikipedia

--- a/00_Clone-Wikipedia-Inicio/index.html
+++ b/00_Clone-Wikipedia-Inicio/index.html
@@ -85,12 +85,12 @@
             <form class="input-select-container" >
                 <div>
                     <input type="text">
-                    <select name="" id="idioma" onchange="mostrarAbreviacion()">
-                        <option value="Es">Español</option>
-                        <option value="En">Inglés</option>
-                        <option value="Fr">Francés</option>
-                        <option value="Pt">Purtugues</option>
-                        <option value="It">Italiano</option>
+                    <select name="" id="idioma" >
+                        <option value="Es" data-display-text="Es">Español</option>
+                        <option value="En" data-display-text="En">Inglés</option>
+                        <option value="Fr" data-display-text="Fr">Francés</option>
+                        <option value="Pt" data-display-text="Pt">Portugues</option>
+                        <option value="It" data-display-text="It">Italiano</option>
                     </select>
                 </div>
 
@@ -266,7 +266,6 @@
         </ul>
     </footer>
 
-    <script src="./main.js"></script>
 
 </body>
 </html>
