Se modifico ejercicio Card

--- a/02_Ejercicio-Card/index.html
+++ b/02_Ejercicio-Card/index.html
@@ -12,13 +12,13 @@
     <div class="card">
         <header class="card_header">
             <img src="00_IMAGES/card-pattern.svg" alt="pattern card" class="card_header-image">
-            <img src="00_IMAGES/victor.jpg" alt="profile image" class="card_header-profile">
+            <img src="00_IMAGES/foto-perfil.jpg" alt="profile image" class="card_header-profile">
         </header>
         <section class="card_body">
-            <p class="card_text">Victor Crest
-                <span class="card_text card_text-light">26</span>
+            <p class="card_text">Daniel Ponce
+                <span class="card_text card_text-light">24</span>
             </p>
-            <p class="card_text card_text-light">London</p>
+            <p class="card_text card_text-light">México</p>
         </section>
         <footer class="card_footer">
             <div class="card_stats">
