Se modificaron estilos y se agrego pestaña favoritos

--- a/07_Ejercicio_Tarjetas_DragonBall/favoritos.html
+++ b/07_Ejercicio_Tarjetas_DragonBall/favoritos.html
@@ -21,14 +21,10 @@
 
     <main>
 
-        <section id="Buscador">
-
-        </section>
-
-        <section id="personajes">
+        <section id="personajes-favoritos">
 
             <div id="personajes-container">
-                
+
                 
             </div>
 
