--- a/07_Ejercicio_Tarjetas_DragonBall/index.html
+++ b/07_Ejercicio_Tarjetas_DragonBall/index.html
@@ -17,6 +17,10 @@
                 <li><a href="./favoritos.html">MIS FAVORITOS</a></li>
             </ul>
         </nav>
+
+        <div class="nav-responsive" inactive>
+            <i class="fa-solid fa-bars"></i>
+        </div>
     </header>
 
     <main>
@@ -28,7 +32,7 @@
         <section id="personajes">
 
             <div id="personajes-container">
-                
+
                 
             </div>
 
